# AIZO-p2

./: CMakeLists.txt  README.md  main.cpp
Algorithms/: BellmanFord.h  Dijkstra.h  FordFulkerson.h  Kruskal.h  Prim.h  Sorting.h
Infrastructure/: Connection.h  Edge.h  FileReader.h  FileWriter.h  GraphConverter.h  GraphDistanceSorter.h  Node.h  RandomGraphGenerator.h
Menu/: MSTMenu.h  MainMenu.h  MaxFlowMenu.h  SSPMenu.h
Menu/Abstractions/: MenuBase.h
Python/: Runner.py  Type1ChartGenerator.py  Type2ChartGenerator.py
Results/: MAX_FLOW_type1_AdjacencyList.csv  MAX_FLOW_type1_AdjacencyMatrix.csv  MAX_FLOW_type2_density20.csv  MAX_FLOW_type2_density60.csv  MAX_FLOW_type2_density99.csv  MST_type1_AdjacencyList.csv  MST_type1_AdjacencyMatrix.csv  MST_type2_density20.csv  MST_type2_density60.csv  MST_type2_density99.csv  SHORTEST_PATH_type1_AdjacencyList.csv  SHORTEST_PATH_type1_AdjacencyMatrix.csv  SHORTEST_PATH_type2_density20.csv  SHORTEST_PATH_type2_density60.csv  SHORTEST_PATH_type2_density99.csv  Type1_MAX_FLOW_type1_AdjacencyList.csv  Type1_MAX_FLOW_type1_AdjacencyMatrix.csv  Type1_MST_type1_AdjacencyList.csv  Type1_MST_type1_AdjacencyMatrix.csv  Type1_SHORTEST_PATH_type1_AdjacencyList.csv  Type1_SHORTEST_PATH_type1_AdjacencyMatrix.csv  Type2_MAX_FLOW_type2_density100.csv  Type2_MAX_FLOW_type2_density20.csv  Type2_MAX_FLOW_type2_density40.csv  Type2_MAX_FLOW_type2_density50.csv  Type2_MAX_FLOW_type2_density60.csv  Type2_MAX_FLOW_type2_density80.csv  Type2_MST_type2_density100.csv  Type2_MST_type2_density20.csv  Type2_MST_type2_density40.csv  Type2_MST_type2_density50.csv  Type2_MST_type2_density60.csv  Type2_MST_type2_density80.csv  Type2_SHORTEST_PATH_type2_density100.csv  Type2_SHORTEST_PATH_type2_density20.csv  Type2_SHORTEST_PATH_type2_density40.csv  Type2_SHORTEST_PATH_type2_density50.csv  Type2_SHORTEST_PATH_type2_density60.csv  Type2_SHORTEST_PATH_type2_density80.csv
Sprawozdanie/: Kwiek-p2.aux  Kwiek-p2.out  Kwiek-p2.tex  Kwiek-p2.toc
Tests/: ReportGenerator.h  TestRandomGraphGeneration.h  TestRunner.h
Utils/: BigDVector.h  BinaryHeap.h  GigaKomarVector.cpp  GigaKomarVector.h  GraphData.h  RepresentationStorer.h
Utils/Data/: GraphDataHandler.h
Utils/DefinitelyNotADataStructures/: DefinitelyNotAQueue.h  DefinitelyNotATuple.h  DefinitelyNotAVector.h  UnionFind.h
Utils/Enums/: Algorithm.h  GraphProblemType.h  GraphRepresentationType.h  SearchMethod.h
Utils/Representations/: AdjacencyList.h  AdjancencyMatrix.h  Edge.h  GraphRepresentation.h
Utils/Results/: FlowResult.h  MSTResult.h  PathResult.h
